02-built-in-resource-type/GatewayAPI/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-minimal
  namespace: pr-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-pod-label
  template:
    metadata:
      labels:
        app: nginx-pod-label
    spec:
      containers:
        - name: nginx
          image: nginx:1.26.0
