02-built-in-resource-type/GatewayAPI/Service.nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  namespace: pr-nginx
spec:
  type: NodePort # For GKE load balancer this has to be a NodePort
  selector:
    app: nginx-pod-label
  ports:
    - protocol: TCP
      port: 80 # Port the service is listening on
      targetPort: 80 # Port the container is listening on (if unset, defaults to equal port value)
