02-built-in-resource-type/GatewayAPI/HTTPRoute.kong.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kong
  namespace: pr-nginx
spec:
  parentRefs:
    - name: kong
  hostnames:
    - "www.adaptors.site"
    - "adaptors.site"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-clusterip
          kind: Service
          port: 80
